--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies: 
   cupertino_icons: ^1.0.5
-  go_router: ^7.0.1
+  go_router: ^7.0.2
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   sentry_flutter: ^7.6.1
@@ -29,6 +29,7 @@ dependencies:
   sqflite: ^2.2.8+4
   flutter: 
     sdk: flutter
+  path_provider: ^2.0.15
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
@@ -79,11 +80,12 @@ flutter:
     - assets/lottie/models/
     - assets/lottie/
     - assets/json/
+    - assets/fonts/
   fonts: 
     - family: Pacifico
       fonts: 
         - asset: assets/fonts/Pacifico-Regular.ttf
-        - style: italic
+          style: italic
 
   uses-material-design: true
   generate: true
