--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter: 
     sdk: flutter
   path_provider: ^2.0.15
+  comment_box: ^0.0.18
+  settings_ui: ^2.0.2
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
