--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   fpdart: 0.6.0
   json_annotation: 4.8.1
   uni_links: 0.5.1
-  uuid: 3.0.7
+  uuid: ^3.0.7
   url_launcher: 6.1.11
   cloud_firestore: ^4.7.1
   sqflite: ^2.2.8+4
