--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.egote_services_v2"
+    namespace "com.godzy.egote_services_v2"
     compileSdk 33
     ndkVersion flutter.ndkVersion
 
