--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_localization: ^0.1.11
   flutter_advanced_drawer: ^1.3.5
   lottie: ^2.4.0
+  supabase_auth_ui: ^0.2.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
