--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,25 +7,25 @@ environment:
 
 dependencies: 
   cupertino_icons: ^1.0.5
-  go_router: ^7.0.2
+  go_router: ^8.0.5
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
-  sentry_flutter: ^7.6.1
-  shared_preferences: ^2.1.1
-  firebase_auth: ^4.6.1
-  firebase_core: ^2.13.0
-  firebase_database: ^10.2.1
+  sentry_flutter: ^7.8.0
+  shared_preferences: ^2.1.2
+  firebase_auth: ^4.6.3
+  firebase_core: ^2.14.0
+  firebase_database: ^10.2.3
   geoflutterfire2: 2.3.15
-  connectycube_sdk: ^2.5.5
+  connectycube_sdk: ^2.5.7
   connectivity_plus: ^4.0.1
   freezed_annotation: 2.2.0
-  supabase_flutter: ^1.9.2
+  supabase_flutter: ^1.10.4
   fpdart: 0.6.0
   json_annotation: 4.8.1
   uni_links: 0.5.1
   uuid: ^3.0.7
   url_launcher: 6.1.11
-  cloud_firestore: ^4.7.1
+  cloud_firestore: ^4.8.1
   sqflite: ^2.2.8+4
   flutter: 
     sdk: flutter
@@ -38,19 +38,21 @@ dependencies:
   flutter_advanced_drawer: ^1.3.5
   lottie: ^2.4.0
   supabase_auth_ui: ^0.2.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
   riverpod_generator: ^2.2.3
-  go_router_builder: ^2.0.1
-  build_runner: ^2.4.4
-  freezed: ^2.3.4
+  go_router_builder: ^2.1.1
+  build_runner: ^2.4.5
+  freezed: ^2.3.5
   json_serializable: ^6.7.0
   riverpod_lint: ^1.3.2
   custom_lint: ^0.4.0
   flutter_flavorizr: ^2.2.1
   flutter_test: 
     sdk: flutter
+  flutter_gen_runner: ^5.3.1
 
 flutter_gen:
   integrations:
@@ -68,11 +70,11 @@ flutter:
     - assets/lottie/image/triangle.png
     - assets/lottie/archive/amenagement/interrieur/sol/matiere/pvc/sol_pvc_holywell.png
     - assets/lottie/archive/amenagement/exterieur/piscines/piscine_sussargue_1.jpg
-    - assets/lottie/models/Android Robot.gif
+    - assets/lottie/models/AndroidLargeRobot.gif
     - assets/lottie/models/AndroidRobot.gif
     - assets/lottie/models/Arctic_Fox_Sitting.gif
     - assets/lottie/models/ArcticFox.gif
-    - assets/lottie/models/Toco Toucan.gif
+    - assets/lottie/models/TocoLargeToucan.gif
     - assets/lottie/models/TocoToucan.gif
     - assets/lottie/models/fox_face_mesh_texture.png
     - assets/lottie/models/prova_texture.png
