--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies: 
   cupertino_icons: ^1.0.5
-  go_router: ^8.0.5
+  go_router: ^9.0.0
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   sentry_flutter: ^7.8.0
@@ -41,6 +41,16 @@ dependencies:
   flutter_svg: ^2.0.7
   flex_color_scheme: ^7.1.2
   flex_color_picker: ^3.2.2
+  flutter_local_notifications: ^14.1.1
+  firebase_messaging: ^14.6.4
+  device_info_plus: ^9.0.2
+  package_info_plus: ^4.0.2
+  universal_io: ^2.2.2
+  flutter_app_badger: ^1.5.0
+  emoji_picker_flutter: ^1.6.1
+  cached_network_image: ^3.2.3
+  file_picker: ^5.3.2
+  photo_view: ^0.14.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
