--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.godzy.egote_services_v2"
+    namespace 'com.godzy.egote_services_v2'
     compileSdk 33
     ndkVersion flutter.ndkVersion
 
@@ -41,7 +41,6 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.godzy.egote_services_v2"
         minSdk 28
         targetSdk 33
