--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,26 +7,26 @@ environment:
 
 dependencies: 
   cupertino_icons: ^1.0.5
-  go_router: ^9.0.0
+  go_router: ^10.0.0
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
-  sentry_flutter: ^7.8.0
-  shared_preferences: ^2.1.2
-  firebase_auth: ^4.6.3
-  firebase_core: ^2.14.0
-  firebase_database: ^10.2.3
+  sentry_flutter: ^7.9.0
+  shared_preferences: ^2.2.0
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
+  firebase_database: ^10.2.4
   geoflutterfire2: 2.3.15
-  connectycube_sdk: ^2.5.7
-  connectivity_plus: ^4.0.1
-  freezed_annotation: 2.2.0
-  supabase_flutter: ^1.10.4
-  fpdart: 0.6.0
+  connectycube_sdk: ^2.6.0
+  connectivity_plus: ^4.0.2
+  freezed_annotation: ^2.4.1
+  supabase_flutter: ^1.10.11
+  fpdart: ^1.0.0
   json_annotation: 4.8.1
   uni_links: 0.5.1
   uuid: ^3.0.7
-  url_launcher: 6.1.11
-  cloud_firestore: ^4.8.1
-  sqflite: ^2.2.8+4
+  url_launcher: ^6.1.12
+  cloud_firestore: ^4.8.4
+  sqflite: ^2.3.0
   flutter: 
     sdk: flutter
   path_provider: ^2.0.15
@@ -36,22 +36,22 @@ dependencies:
   formz: ^0.6.0
   flutter_localization: ^0.1.13
   flutter_advanced_drawer: ^1.3.5
-  lottie: ^2.4.0
-  supabase_auth_ui: ^0.2.0
+  lottie: ^2.5.0
+  supabase_auth_ui: ^0.2.1
   flutter_svg: ^2.0.7
-  flex_color_scheme: ^7.1.2
-  flex_color_picker: ^3.2.2
-  flutter_local_notifications: ^14.1.1
-  firebase_messaging: ^14.6.4
-  device_info_plus: ^9.0.2
-  package_info_plus: ^4.0.2
+  flex_color_scheme: ^7.2.0
+  flex_color_picker: ^3.3.0
+  flutter_local_notifications: ^15.1.0+1
+  firebase_messaging: ^14.6.5
+  device_info_plus: ^9.0.3
+  package_info_plus: ^4.1.0
   universal_io: ^2.2.2
   flutter_app_badger: ^1.5.0
   emoji_picker_flutter: ^1.6.1
   cached_network_image: ^3.2.3
-  file_picker: ^5.3.2
+  file_picker: ^5.3.3
   photo_view: ^0.14.0
-  firebase_ui_auth: ^1.5.0
+  firebase_ui_auth: ^1.6.2
 
 dev_dependencies: 
   flutter_lints: ^2.0.1
@@ -66,7 +66,7 @@ dev_dependencies:
   flutter_test: 
     sdk: flutter
   flutter_gen_runner: ^5.3.1
-  icons_launcher: ^2.1.2
+  icons_launcher: ^2.1.3
 
 flutter_gen:
   integrations:
