--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: egote_services_v2
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=3.1.0-15.0.dev <4.0.0'
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.5
   go_router: ^10.0.0
   flutter_riverpod: ^2.3.6
@@ -27,9 +27,9 @@ dependencies:
   url_launcher: ^6.1.12
   cloud_firestore: ^4.8.4
   sqflite: ^2.3.0
-  flutter: 
+  flutter:
     sdk: flutter
-  path_provider: ^2.0.15
+  path_provider: ^2.1.1
   comment_box: ^0.0.18
   settings_ui: ^2.0.2
   intl: ^0.18.1
@@ -52,18 +52,20 @@ dependencies:
   file_picker: ^5.3.3
   photo_view: ^0.14.0
   firebase_ui_auth: ^1.6.2
+  datadog_flutter_plugin: ^1.6.0
+  mocktail: ^1.0.0
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.1
   riverpod_generator: ^2.2.3
   go_router_builder: ^2.1.1
   build_runner: ^2.4.5
   freezed: ^2.3.5
   json_serializable: ^6.7.0
-  riverpod_lint: ^1.3.2
-  custom_lint: ^0.4.0
+  riverpod_lint: ^2.0.3
+  custom_lint: ^0.5.3
   flutter_flavorizr: ^2.2.1
-  flutter_test: 
+  flutter_test:
     sdk: flutter
   flutter_gen_runner: ^5.3.1
   icons_launcher: ^2.1.3
@@ -72,8 +74,8 @@ flutter_gen:
   integrations:
     flutter_svg: true
 
-flutter: 
-  assets: 
+flutter:
+  assets:
     - assets/lottie/image/carrelage_background.jpg
     - assets/lottie/image/godzy_logo.png
     - assets/lottie/image/img_not_available.jpg
@@ -115,11 +117,15 @@ flutter:
     - assets/json/local.config.json
     - assets/json/production.config.json
     - assets/fonts/
-  fonts: 
+  fonts:
     - family: Pacifico
-      fonts: 
+      fonts:
         - asset: assets/fonts/Pacifico-Regular.ttf
           style: italic
+
+    - family: FlexIcons
+      fonts:
+        - asset: assets/fonts/FlexIcons.ttf
 
   uses-material-design: true
   generate: true
