--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.5
-  go_router: ^10.0.0
+  go_router: ^13.2.0
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
   sentry_flutter: ^7.9.0
@@ -17,9 +17,9 @@ dependencies:
   firebase_database: ^10.2.4
   geoflutterfire2: 2.3.15
   connectycube_sdk: ^2.6.0
-  connectivity_plus: ^4.0.2
+  connectivity_plus: ^5.0.2
   freezed_annotation: ^2.4.1
-  supabase_flutter: ^1.10.11
+  supabase_flutter: ^2.3.4
   fpdart: ^1.0.0
   json_annotation: 4.8.1
   uni_links: 0.5.1
@@ -33,15 +33,15 @@ dependencies:
   comment_box: ^0.0.18
   settings_ui: ^2.0.2
   intl: ^0.18.1
-  formz: ^0.6.0
-  flutter_localization: ^0.1.13
+  formz: ^0.7.0
+  flutter_localization: ^0.2.0
   flutter_advanced_drawer: ^1.3.5
   lottie: ^2.5.0
-  supabase_auth_ui: ^0.2.1
+  supabase_auth_ui: ^0.4.1
   flutter_svg: ^2.0.7
   flex_color_scheme: ^7.2.0
   flex_color_picker: ^3.3.0
-  flutter_local_notifications: ^15.1.0+1
+  flutter_local_notifications: ^17.0.0
   firebase_messaging: ^14.6.5
   device_info_plus: ^9.0.3
   package_info_plus: ^4.1.0
@@ -49,21 +49,22 @@ dependencies:
   flutter_app_badger: ^1.5.0
   emoji_picker_flutter: ^1.6.1
   cached_network_image: ^3.2.3
-  file_picker: ^5.3.3
+  file_picker: ^8.0.0+1
   photo_view: ^0.14.0
   firebase_ui_auth: ^1.6.2
   datadog_flutter_plugin: ^1.6.0
   mocktail: ^1.0.0
+  hive: ^2.2.3
 
 dev_dependencies:
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.2
   riverpod_generator: ^2.2.3
   go_router_builder: ^2.1.1
   build_runner: ^2.4.5
   freezed: ^2.3.5
   json_serializable: ^6.7.0
   riverpod_lint: ^2.0.3
-  custom_lint: ^0.5.3
+  custom_lint: ^0.6.2
   flutter_flavorizr: ^2.2.1
   flutter_test:
     sdk: flutter
