--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,6 +1,4 @@
-org.gradle.jvmargs=-Xmx1536M -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
-android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
+org.gradle.kotlin.dsl.allWarningsAsErrors=true
