--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   firebase_database: ^10.2.4
   geoflutterfire2: 2.3.15
   connectycube_sdk: ^2.6.0
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.0.1
   freezed_annotation: ^2.4.1
   supabase_flutter: ^2.3.4
   fpdart: ^1.0.0
@@ -36,7 +36,7 @@ dependencies:
   formz: ^0.7.0
   flutter_localization: ^0.2.0
   flutter_advanced_drawer: ^1.3.5
-  lottie: ^2.5.0
+  lottie: ^3.1.0
   supabase_auth_ui: ^0.4.1
   flutter_svg: ^2.0.7
   flex_color_scheme: ^7.2.0
@@ -44,10 +44,10 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   firebase_messaging: ^14.6.5
   device_info_plus: ^9.0.3
-  package_info_plus: ^4.1.0
+  package_info_plus: ^5.0.1
   universal_io: ^2.2.2
   flutter_app_badger: ^1.5.0
-  emoji_picker_flutter: ^1.6.1
+  emoji_picker_flutter: ^2.1.1
   cached_network_image: ^3.2.3
   file_picker: ^8.0.0+1
   photo_view: ^0.14.0
@@ -72,6 +72,7 @@ dev_dependencies:
   icons_launcher: ^2.1.3
 
 flutter_gen:
+  output: lib/gen
   integrations:
     flutter_svg: true
 
