--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=3.1.0-15.0.dev <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.5
@@ -58,18 +58,18 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^3.0.2
-  riverpod_generator: ^2.2.3
-  go_router_builder: ^2.1.1
-  build_runner: ^2.4.5
-  freezed: ^2.3.5
-  json_serializable: ^6.7.0
-  riverpod_lint: ^2.0.3
-  custom_lint: ^0.6.2
-  flutter_flavorizr: ^2.2.1
+  riverpod_generator: ^2.4.0
+  go_router_builder: ^2.4.1
+  build_runner: ^2.4.9
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
+  riverpod_lint: ^2.3.10
+  custom_lint: ^0.6.4
+  flutter_flavorizr: ^2.2.3
   flutter_test:
     sdk: flutter
-  flutter_gen_runner: ^5.3.1
-  icons_launcher: ^2.1.3
+  flutter_gen_runner: ^5.4.0
+  icons_launcher: ^2.1.7
 
 flutter_gen:
   output: lib/gen
