--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,62 +6,66 @@ environment:
   sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
-  cupertino_icons: ^1.0.5
-  go_router: ^13.2.0
-  flutter_riverpod: ^2.3.6
-  riverpod_annotation: ^2.1.1
-  sentry_flutter: ^7.9.0
-  shared_preferences: ^2.2.0
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
-  firebase_database: ^10.2.4
+  cupertino_icons: ^1.0.8
+  go_router: ^13.2.4
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  sentry_flutter: ^7.20.0
+  shared_preferences: ^2.2.3
+  firebase_auth: ^4.19.2
+  firebase_core: ^2.30.0
+  firebase_database: ^10.5.2
   geoflutterfire2: 2.3.15
-  connectycube_sdk: ^2.6.0
-  connectivity_plus: ^6.0.1
+  #  connectycube_sdk: ^2.11.4
+  connectivity_plus: ^6.0.2
   freezed_annotation: ^2.4.1
-  supabase_flutter: ^2.3.4
-  fpdart: ^1.0.0
+  supabase_flutter: ^2.5.1
+  fpdart: ^1.1.0
   json_annotation: 4.8.1
-  uni_links: 0.5.1
-  uuid: ^3.0.7
-  url_launcher: ^6.1.12
-  cloud_firestore: ^4.8.4
-  sqflite: ^2.3.0
+  #  uni_links: 0.5.1
+  uuid: ^4.4.0
+  url_launcher: ^6.2.6
+  cloud_firestore: ^4.17.0
+  sqflite: ^2.3.3
   flutter:
     sdk: flutter
-  path_provider: ^2.1.1
+  path_provider: ^2.1.3
   comment_box: ^0.0.18
   settings_ui: ^2.0.2
-  intl: ^0.18.1
   formz: ^0.7.0
-  flutter_localization: ^0.2.0
-  flutter_advanced_drawer: ^1.3.5
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+  flutter_advanced_drawer: ^1.3.6
   lottie: ^3.1.0
-  supabase_auth_ui: ^0.4.1
-  flutter_svg: ^2.0.7
-  flex_color_scheme: ^7.2.0
-  flex_color_picker: ^3.3.0
-  flutter_local_notifications: ^17.0.0
-  firebase_messaging: ^14.6.5
-  device_info_plus: ^9.0.3
-  package_info_plus: ^5.0.1
+  supabase_auth_ui: ^0.4.4
+  flutter_svg: ^2.0.10+1
+  flex_color_scheme: ^7.3.1
+  flex_color_picker: ^3.4.1
+  flutter_local_notifications: ^17.0.1
+  firebase_messaging: ^14.8.2
+  device_info_plus: ^10.1.0
+  package_info_plus: '>=4.2.0 <6.0.0'
   universal_io: ^2.2.2
-  flutter_app_badger: ^1.5.0
-  emoji_picker_flutter: ^2.1.1
-  cached_network_image: ^3.2.3
-  file_picker: ^8.0.0+1
-  photo_view: ^0.14.0
-  firebase_ui_auth: ^1.6.2
-  datadog_flutter_plugin: ^1.6.0
-  mocktail: ^1.0.0
+  #  flutter_app_badger: ^1.5.0
+  emoji_picker_flutter: ^2.2.0
+  cached_network_image: ^3.3.1
+  file_picker: ^8.0.1
+  photo_view: ^0.15.0
+  firebase_ui_auth: ^1.13.1
+  datadog_flutter_plugin: ^2.4.0
+  mocktail: ^1.0.3
   hive: ^2.2.3
+  badges: ^3.1.2
+  multi_link_text: ^0.0.5
+  flutter_webrtc: ^0.10.3
 
 dev_dependencies:
   flutter_lints: ^3.0.2
   riverpod_generator: ^2.4.0
-  go_router_builder: ^2.4.1
+  go_router_builder: ^2.5.1
   build_runner: ^2.4.9
-  freezed: ^2.4.7
+  freezed: ^2.5.2
   json_serializable: ^6.7.1
   riverpod_lint: ^2.3.10
   custom_lint: ^0.6.4
