--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,25 +7,25 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-  go_router: ^13.2.4
+  go_router: ^14.0.2
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
-  sentry_flutter: ^7.20.0
+  sentry_flutter: ^8.0.0
   shared_preferences: ^2.2.3
-  firebase_auth: ^4.19.2
-  firebase_core: ^2.30.0
-  firebase_database: ^10.5.2
+  firebase_auth: ^4.19.4
+  firebase_core: ^2.30.1
+  firebase_database: ^10.5.4
   geoflutterfire2: 2.3.15
   #  connectycube_sdk: ^2.11.4
-  connectivity_plus: ^6.0.2
+  connectivity_plus: ^6.0.3
   freezed_annotation: ^2.4.1
-  supabase_flutter: ^2.5.1
+  supabase_flutter: ^2.5.2
   fpdart: ^1.1.0
-  json_annotation: 4.8.1
+  json_annotation: ^4.9.0
   #  uni_links: 0.5.1
   uuid: ^4.4.0
   url_launcher: ^6.2.6
-  cloud_firestore: ^4.17.0
+  cloud_firestore: ^4.17.2
   sqflite: ^2.3.3
   flutter:
     sdk: flutter
@@ -35,38 +35,39 @@ dependencies:
   formz: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  intl: any
+  intl: ^0.18.1
   flutter_advanced_drawer: ^1.3.6
   lottie: ^3.1.0
   supabase_auth_ui: ^0.4.4
   flutter_svg: ^2.0.10+1
   flex_color_scheme: ^7.3.1
   flex_color_picker: ^3.4.1
-  flutter_local_notifications: ^17.0.1
-  firebase_messaging: ^14.8.2
+  flutter_local_notifications: ^17.1.0
+  firebase_messaging: ^14.9.1
   device_info_plus: ^10.1.0
-  package_info_plus: '>=4.2.0 <6.0.0'
+  package_info_plus: '>=4.2.0 <8.0.0'
   universal_io: ^2.2.2
   #  flutter_app_badger: ^1.5.0
   emoji_picker_flutter: ^2.2.0
   cached_network_image: ^3.3.1
-  file_picker: ^8.0.1
+  file_picker: ^8.0.3
   photo_view: ^0.15.0
-  firebase_ui_auth: ^1.13.1
+  firebase_ui_auth: ^1.14.0
   datadog_flutter_plugin: ^2.4.0
   mocktail: ^1.0.3
   hive: ^2.2.3
   badges: ^3.1.2
   multi_link_text: ^0.0.5
   flutter_webrtc: ^0.10.3
+  google_generative_ai: ^0.3.2
 
 dev_dependencies:
   flutter_lints: ^3.0.2
   riverpod_generator: ^2.4.0
-  go_router_builder: ^2.5.1
+  go_router_builder: ^2.6.0
   build_runner: ^2.4.9
   freezed: ^2.5.2
-  json_serializable: ^6.7.1
+  json_serializable: ^6.8.0
   riverpod_lint: ^2.3.10
   custom_lint: ^0.6.4
   flutter_flavorizr: ^2.2.3
