--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   multi_link_text: ^0.0.5
   flutter_webrtc: ^0.10.3
   google_generative_ai: ^0.3.2
+  url_launcher_android: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^3.0.2
