--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,26 +7,31 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-  go_router: ^14.0.2
+  go_router: ^14.1.0
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
-  sentry_flutter: ^8.0.0
+  sentry_flutter: ^8.1.0
   shared_preferences: ^2.2.3
-  firebase_auth: ^4.19.4
-  firebase_core: ^2.30.1
-  firebase_database: ^10.5.4
+  firebase_auth: ^4.19.5
+  firebase_core: ^2.31.0
+  firebase_database: ^10.5.5
   geoflutterfire2: 2.3.15
   #  connectycube_sdk: ^2.11.4
   connectivity_plus: ^6.0.3
   freezed_annotation: ^2.4.1
-  supabase_flutter: ^2.5.2
+  supabase_flutter:
+    git:
+      url: https://github.com/supabase/supabase-flutter.git
+      ref: main
+      path: packages/supabase_flutter
+
   fpdart: ^1.1.0
   json_annotation: ^4.9.0
   #  uni_links: 0.5.1
   uuid: ^4.4.0
-  url_launcher: ^6.2.6
-  cloud_firestore: ^4.17.2
-  sqflite: ^2.3.3
+  #  url_launcher: ^6.2.6
+  cloud_firestore: ^4.17.3
+  sqflite: ^2.3.3+1
   flutter:
     sdk: flutter
   path_provider: ^2.1.3
@@ -38,14 +43,13 @@ dependencies:
   intl: ^0.18.1
   flutter_advanced_drawer: ^1.3.6
   lottie: ^3.1.0
-  supabase_auth_ui: ^0.4.4
   flutter_svg: ^2.0.10+1
   flex_color_scheme: ^7.3.1
   flex_color_picker: ^3.4.1
-  flutter_local_notifications: ^17.1.0
-  firebase_messaging: ^14.9.1
+  flutter_local_notifications: ^17.1.2
+  firebase_messaging: ^14.9.2
   device_info_plus: ^10.1.0
-  package_info_plus: '>=4.2.0 <8.0.0'
+  package_info_plus: ^8.0.0
   universal_io: ^2.2.2
   #  flutter_app_badger: ^1.5.0
   emoji_picker_flutter: ^2.2.0
@@ -58,14 +62,14 @@ dependencies:
   hive: ^2.2.3
   badges: ^3.1.2
   multi_link_text: ^0.0.5
-  flutter_webrtc: ^0.10.3
-  google_generative_ai: ^0.3.2
-  url_launcher_android: ^6.3.1
+  flutter_webrtc: ^0.10.4
+  google_generative_ai: ^0.3.3
+  #  url_launcher_android: ^6.3.1
 
 dev_dependencies:
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
   riverpod_generator: ^2.4.0
-  go_router_builder: ^2.6.0
+  go_router_builder: ^2.6.2
   build_runner: ^2.4.9
   freezed: ^2.5.2
   json_serializable: ^6.8.0
