stage avant flutter upgrade

--- a/web/firebase.json
+++ b/web/firebase.json
@@ -1,5 +1,11 @@
 {
   "hosting": {
-    "source": "./egoteback.web.app"
+    "source": "./egoteback.web.app",
+    "public": "",
+    "redirects": [ {
+      "source": "/__/auth",
+      "destination": "/login",
+      "type": 301
+    } ]
   }
 }
