--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,11 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-  go_router: ^14.1.0
+  go_router: ^14.1.1
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
-  sentry_flutter: ^8.1.0
+  sentry_flutter: ^8.2.0
+  flutter_plugin_android_lifecycle: ^2.0.19
   shared_preferences: ^2.2.3
   firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
@@ -40,9 +41,9 @@ dependencies:
   formz: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.1
+  intl: ^0.19.0
   flutter_advanced_drawer: ^1.3.6
-  lottie: ^3.1.0
+  lottie: ^3.1.1
   flutter_svg: ^2.0.10+1
   flex_color_scheme: ^7.3.1
   flex_color_picker: ^3.4.1
@@ -62,18 +63,18 @@ dependencies:
   hive: ^2.2.3
   badges: ^3.1.2
   multi_link_text: ^0.0.5
-  flutter_webrtc: ^0.10.4
-  google_generative_ai: ^0.3.3
+  flutter_webrtc: ^0.10.6
+  google_generative_ai: ^0.4.0
   #  url_launcher_android: ^6.3.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
-  riverpod_generator: ^2.4.0
+  riverpod_generator: ^2.4.1
   go_router_builder: ^2.6.2
   build_runner: ^2.4.9
   freezed: ^2.5.2
   json_serializable: ^6.8.0
-  riverpod_lint: ^2.3.10
+  riverpod_lint: ^2.3.11
   custom_lint: ^0.6.4
   flutter_flavorizr: ^2.2.3
   flutter_test:
