--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.4.0
 
 dependencies:
   cupertino_icons: ^1.0.8
@@ -41,7 +41,7 @@ dependencies:
   formz: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  intl: any
+  intl: ^0.19.0
   flutter_advanced_drawer: ^1.3.6
   lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
@@ -63,7 +63,6 @@ dependencies:
   hive: ^2.2.3
   badges: ^3.1.2
   multi_link_text: ^0.0.5
-  flutter_webrtc: ^0.10.6
   google_generative_ai: ^0.4.0
   #  url_launcher_android: ^6.3.1
 
