--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,24 @@
-import org.gradle.kotlin.dsl.tooling.models.KotlinBuildScriptModel
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 
 rootProject.file("../build")
 subprojects {
     project.file("${rootProject.name}/${project.name}")
+}
+
+subprojects {
+    project.evaluationDependsOn(':app')
+    dependencyLocking {
+        ignoredDependencies.add('io.flutter:*')
+        lockFile = file("${rootProject.projectDir}/project-${project.name}.lockfile")
+        if (!project.hasProperty('local-engine-repo')) {
+            lockAllConfigurations()
+        }
+    }
 }
 
 tasks.register("clean") {
@@ -16,6 +32,7 @@ tasks.register("copyFiles") {
     from(configurations.compileClasspath)
 }
 
-/*tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile>().configureEach {
+/*
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinJvmCompile>('kotlin').configureEach {
     jvmTargetValidationMode.set(org.jetbrains.kotlin.gradle.dsl.jvm.JvmTargetValidationMode.WARNING)
 }*/
