--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 android.useAndroidX=true
+networkTimeout=10000
 #android.enableJetifier=false
 kotlin.build.report.output=file
 org.gradle.configuration-cache=true
