--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,8 +1,9 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
 android.useAndroidX=true
 networkTimeout=10000
-#android.enableJetifier=false
 kotlin.build.report.output=file
-org.gradle.configuration-cache=true
+org.gradle.dependency.verification.console=verbose
+org.gradle.dependency.verification=lenient
+#org.gradle.configuration-cache=true
 #${project_folder}/build/reports/kotlin-build/${project_name}-timestamp.txt
 #org.gradle.configuration-cache.inputs.unsafe.ignore.in-serialization=true
