--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,15 +1,35 @@
 [versions]
 desugar_jdk_libs = "2.0.4"
+flutter_embedding_debug = "1.0.0-f6344b75dcf861d8bf1f1322780b8811f982e31a"
+flutter_embedding_profile = "1.0.0-f6344b75dcf861d8bf1f1322780b8811f982e31a"
+flutter_embedding_release = "1.0.0-f6344b75dcf861d8bf1f1322780b8811f982e31a"
 junitJupiter = "5.10.2"
 legacySupportV13 = "1.0.0"
+orientdbCore = "3.2.30"
 workRuntime = "2.9.0"
 
 [libraries]
+arm64_v8a_debug = { module = "io.flutter:arm64_v8a_debug", version.ref = "flutter_embedding_debug" }
+arm64_v8a_profile = { module = "io.flutter:arm64_v8a_profile", version.ref = "flutter_embedding_profile" }
+arm64_v8a_release = { module = "io.flutter:arm64_v8a_release", version.ref = "flutter_embedding_release" }
+armeabi_v7a_debug = { module = "io.flutter:armeabi_v7a_debug", version.ref = "flutter_embedding_debug" }
+armeabi_v7a_profile = { module = "io.flutter:armeabi_v7a_profile", version.ref = "flutter_embedding_profile" }
+armeabi_v7a_release = { module = "io.flutter:armeabi_v7a_release", version.ref = "flutter_embedding_release" }
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
+flutter_embedding_engine = { module = "io.flutter:flutter_embedding_engine", version.ref = "flutter_embedding_debug" }
+flutter_embedding_profile = { module = "io.flutter:flutter_embedding_profile", version.ref = "flutter_embedding_profile" }
+flutter_embedding_release = { module = "io.flutter:flutter_embedding_release", version.ref = "flutter_embedding_release" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junitJupiter" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 legacy-support-v13 = { group = "androidx.legacy", name = "legacy-support-v13", version.ref = "legacySupportV13" }
+orientdb-core = { module = "com.orientechnologies:orientdb-core", version.ref = "orientdbCore" }
 work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workRuntime" }
+x86_64_debug = { module = "io.flutter:x86_64_debug", version.ref = "flutter_embedding_debug" }
+x86_64_profile = { module = "io.flutter:x86_64_profile", version.ref = "flutter_embedding_profile" }
+x86_64_release = { module = "io.flutter:x86_64_release", version.ref = "flutter_embedding_release" }
+x86_debug = { module = "io.flutter:x86_debug", version.ref = "flutter_embedding_debug" }
+x86_profile = { module = "io.flutter:x86_profile", version.ref = "flutter_embedding_profile" }
+x86_release = { module = "io.flutter:x86_release", version.ref = "flutter_embedding_release" }
 
 [plugins]
 
